# strawberry-pkg

./: README.md  pyproject.toml
strawberry/pkg/: __init__.py
testproject/: pyproject.toml
tests/: test_import.py
